# TermineTermineTermine

./: README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: db.py  main.py  models.py  routes_polls.py  routes_results.py  routes_votes.py  schemas.py  security.py
backend/tests/: conftest.py  test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CalendarMonth.vue  DayCell.vue  ShareLink.vue  ToastBar.vue  VoteLegend.vue
frontend/src/components/ui/: BaseButton.vue  BaseCard.vue  BaseInput.vue
frontend/src/composables/: toast.ts
frontend/src/pages/: CreatePollPage.vue  PollPage.vue  ResultsPage.vue
frontend/src/router/: index.ts
frontend/src/styles/: global.css
frontend/src/utils/: adminToken.ts  dateFormat.ts
